# LMPF

./: .env  Dockerfile  README.md  README.rst  bar_employed_unauthorized_by_country_2022.html  country_unauth_tax_contributions_2022.html  employed_unauthorized_population_2009_2024.html  pyproject.toml  railway.toml
app/: __init__.py  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  utils.py
app/routes/: __init__.py  articles.py  auth.py  payment.py  subscription.py
app/templates/: articles_page.html  layout.html  login.html
docs/: requirements.txt
docs/_static/: custom.css
docs/server/: app.py  main.py
docs/server/static/: styles.css
docs/server/templates/: login.html  payment.html  profile  profile.html  register.html  subscribe.html
docs/source/: GDP_plot.html  My-art.rst  My-art2.rst  My-art4.rst  bar_2024.html  conf.py  index.html  index.rst  pie_2024.html
docs/source/_static/: GDP_plot.html  My-art3.rst  bar_2024.html  bar_gdp_contribution_unauthorized_2022.html  custom.css  employed_by_industry_mexico_2022_polar.html  employed_by_industry_mexico_2022_polar_scaled.html  employed_by_industry_mexico_unauthorized_2022_polar.html  employed_by_industry_native_2022_pie.html  employed_by_industry_native_2022_polar.html  employed_by_industry_native_mexico_mexico_unauth_2022.csv  employment_ratio_timeseries_2007_2025.html  gdp_history.html  gdp_top10_foreign_contributors_2024.html  mexican_foreign_born_gdp_vs_oecd.html  mexican_foreign_born_gdp_vs_oecd_updated.html  mexican_foreign_born_vs_major_economies.html  mexican_foreign_born_vs_major_economies_updated.html  offender_ethnicity_per_crime_beautifuldrug.html  offender_ethnicity_per_crime_beautifulll_small.html  polar_mexico_min.html  polar_mexico_unauthorized_min.html  polar_native_min.html  summary_table_census_fred.html  (+1 more)
frontend/: package-lock.json  package.json
tests/: test_auth.py
