[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "the-truth-project"
version = "0.1.0"
description = "Labor Market and Population Forecasting Toolkit"
authors = [
    { name = "TheOs", email = "theos@tutamail.com" }
]
readme = "README.rst"
license = { text = "MIT" }
keywords = ["fastapi", "mongodb", "web"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pymongo>=4.7.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/TheStatsProject/TheStatsProject-LMPF"
Repository = "https://github.com/TheStatsProject/TheStatsProject-LMPF"
Documentation = "https://thestatsproject.github.io/TheStatsProject-LMPF/"

[tool.flit.module]
name = "app"
