[project]
name = "the-truth-project"
version = "0.1.0"
description = "Labor Market and Population Forecasting Toolkit"
authors = [
    { name = "TheOs", email = "theos@tutamail.com" }
]
readme = "README.rst"
license = { text = "MIT" }
keywords = ["fastapi", "mongodb", "web"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pymongo>=4.7.0"
]
requires-python = ">=3.8"

[tool.flit.module]
name = "app"
