[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "the-truth-project"
version = "0.1.0"
description = "Labor Market and Population Forecasting Toolkit"
authors = [
    { name = "TheOs", email = "theos@tutamail.com" }
]
readme = "README.rst"
license = { text = "MIT" }
keywords = ["fastapi", "mongodb", "web"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pymongo>=4.7.0",
    "starlette>=0.36.3",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.2"
]
requires-python = ">=3.8"

[tool.flit.module]
name = "app"
